# ImageRetrievalV2

./: .gitignore  CMakeLists.txt
cmake/find/: FindGLog.cmake
server/: CMakeLists.txt
server/cmake/find/: FindIod.cmake  FindSilicon.cmake
server/src/: main.cpp  server.cpp  server.cpp.orig  server.h  server.h.orig  server_configurations.h
server/src/utils/: env_params.h  global_params.h
server/src/utils/hesaff/: affine.cpp  affine.h  helpers.cpp  helpers.h  hesaff.h  pyramid.cpp  pyramid.h  siftdesc.cpp  siftdesc.h
server/src/utils/ir/: IrResult.hpp.orig  database_params.cpp  database_params.cpp.orig  database_params.h  database_params.h.orig  ir_instance.cpp  ir_instance.cpp.orig  ir_instance.h  ir_instance.h.orig  ir_instance.hpp.orig  ir_result.h  ir_result.hpp.orig  quantization_params.h  quantization_params.h.orig
server/src/utils/ir/extensions/: ir_aqe_extension.cpp  ir_aqe_extension.h  query_expansion_params.h
server/src/utils/mask/: mask_impl.cpp  mask_impl.cpp.orig  mask_impl.h  mask_impl.h.orig  mask_interface.h  mask_interface.h.orig
server/src/utils/taskmgr/: task_manager.cpp  task_manager.h  task_status.h
server/test/utils/hesaff/: test_hesaff.cpp
server/test/utils/hesaff/data/: park.sift
server/test/utils/ir/: test_ir.cpp  test_ir_instance.cpp  test_ir_instance_aqe.cpp
server/test/utils/ir/data/: Clustering_l2_1000000_13516675_128_50it.hdf5
server/test/utils/ir/data/groundtruth/: all_souls_000051_ok.txt  ashmolean_000269_good.txt  bodleian_000107_good.txt  bodleian_000132_good.txt  cornmarket_000047_good.txt  keble_000214_good.txt  magdalen_000058_good.txt  oxford_001752_good.txt  oxford_001753_good.txt  oxford_002734_good.txt  oxford_002985_good.txt  pitt_rivers_000087_good.txt
